# rust_search_engine

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js
documentation/: README.md
misc/: test.xml  test2.xml
src/: lexer.rs  lib.rs  model.rs  server.rs
src/file_indexer/: main.rs
src/index_search/: main.rs
src/index_search_web_server/: main.rs
src/snowball/: mod.rs
src/stemmer/: main.rs
src/xml_indexer/: main.rs
src/xml_test/: main.rs
