[package]
name = "rust_search_engine"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[dependencies]
xml-rs = { version = "0.8.4"}
clap = {version = "4.1.8", features = ["derive"]}
serde_json = {version = "1.0.94" }

[[bin]]
name = "xml_indexer"
path = "src/xml_indexer/main.rs"

[[bin]]
name = "index_search"
path = "src/index_search/main.rs"
