[package]
name = "rust_search_engine"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[dependencies]
xml-rs = { version = "0.8.4"}
clap = {version = "4.1.8", features = ["derive"]}
serde_json = {version = "1.0.94" }
tiny_http = {version = "0.11"}

[lib]
name = "search_engine"
path = "src/lib.rs"

[[bin]]
name = "xml_indexer"
path = "src/xml_indexer/main.rs"

[[bin]]
name = "index_search"
path = "src/index_search/main.rs"

[[bin]]
name = "index_search_web_server"
path = "src/index_search_web_server/main.rs"
